tests/baselines/reference/infinitelyExpandingTypes1.errors.txt
tests/cases/compiler/infinitelyExpandingTypes1.ts(21,1): error TS2367: Comparison of expressions of types 'List<number>' and 'List<string>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.


==== tests/cases/compiler/infinitelyExpandingTypes1.ts (1 errors) ====
    interface List<T> {
        data: T;
        next: List<T>;
        owner: List<List<T>>;
    }
    
    
    interface MyList<T> {
        data: T;
        next: MyList<T>;
        owner: MyList<MyList<T>>;
    }
    
    var l: List<number>;
    var m: MyList<number>;
    
    l == m; // should error
    
    var l2: List<string>;
    
    l == l2; // should error;
    ~~~~~~~
!!! error TS2367: Comparison of expressions of types 'List<number>' and 'List<string>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    
    l == l; // should not error